feat: about-section styled

--- a/src/style/partials/_variables.scss
+++ b/src/style/partials/_variables.scss
@@ -32,6 +32,10 @@ $green: #00AC4D;
     background-color: $light-green;
 }
 
+.ms-color-light-green {
+    color: $light-green;
+}
+
 .ms-icon {
     width: 40px;
     height: 40px;
