feat: add variables in partials > _variables.scss + AppTestimonials

--- a/src/style/partials/_variables.scss
+++ b/src/style/partials/_variables.scss
@@ -45,3 +45,15 @@ $green: #00AC4D;
     width: 25px;
     height: 25px;
 }
+
+.py-120 {
+    padding: 120px 0;
+}
+
+.p-250 {
+    padding: 250px;
+}
+
+.fs-50 {
+    font-size: 50px;
+}
