feat: footer layout completed

--- a/src/style/partials/_variables.scss
+++ b/src/style/partials/_variables.scss
@@ -3,6 +3,7 @@ $purple: #202046;
 $dark-purple: #1A1935;
 $light-green: #05cc7c;
 $green: #00AC4D;
+$violet: #3C3C93;
 
 .ms-bg-light-purple {
     background-color: $light-purple;
