--- a/src/style/partials/_variables.scss
+++ b/src/style/partials/_variables.scss
@@ -52,6 +52,11 @@ $light-violet: #333287;
     height: 25px;
 }
 
+.ms-md-icon {
+    width: 60px;
+    height: 60px;
+}
+
 .ms-lg-icon {
     width: 85px;
     height: 85px;
